Leaflet given 13 points form data.xls. Age Chart formatting changes.. Animated death counter included (encountering bug with delayed page load). Race chart formatting, gridlines removed, and individual labels given (still need these to populate legend).

--- a/Learning/Leaflet/leaflet-intro/index.html
+++ b/Learning/Leaflet/leaflet-intro/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang-"en">
+<html lang=en">
 <head>
   <meta charset="ut-8">
   <title> My Leaflet Intro Website</title>
@@ -34,8 +34,20 @@
 
           // map.addLayer(layer);
 
-    L.marker([33.488311,-111.924782],['Raymond_Test']).addTo(map)
-    .bindPopup('Blah blah')
+    L.marker([33.488311,-111.924782],['Raymond_Test']).addTo(map).bindPopup('Blah blah')
+    L.marker([33.3923687,-111.9689333],['1st Crash']).addTo(map).bindPopup('US-60 near Tempe')
+    L.marker([33.5732917,-112.2033332],['2nd Crash']).addTo(map).bindPopup('67th Ave / Peoria and Olive Ave.')
+    L.marker([33.4949541,-112.1517066],['3rd Crash']).addTo(map).bindPopup('43rd Ave. / Indian School')
+    L.marker([33.4483029,-111.9884709],['4th Crash']).addTo(map).bindPopup('44th St. / Washington St.')
+    L.marker([33.4804547,-112.0042045],['5th Crash']).addTo(map).bindPopup('36th St. / Thomas Rd.')
+
+    L.marker([33.5240146,-112.1168933],['6th Crash']).addTo(map).bindPopup('27th Ave / Bethany Home Rd.')
+    L.marker([33.5827710,-111.9777982],['7th Crash']).addTo(map).bindPopup('Shea Blvd. / Tatum Blvd.')
+    L.marker([33.4883080,-111.9346930],['8th Crash']).addTo(map).bindPopup('68th St / 6th St.')
+    L.marker([33.3783333,-111.9631603],['9th Crash']).addTo(map).bindPopup('Baseline Rd. / Priest Dr.')
+    L.marker([33.4228400,-111.7193169],['10th Crash']).addTo(map).bindPopup('Higley Rd. / University Rd.')
+    L.marker([33.5094512,-112.1256012],['11th Crash']).addTo(map).bindPopup('31st Ave. / Camelback Rd.')
+    L.marker([33.4510824,-112.1175183],['12th Crash']).addTo(map).bindPopup('27th Ave. / Van Buren St.')
     // .openPopup();
     // L.marker([33.449184,-112.077019]).addTo(map)
     // .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
