Removed collision label from race chart

--- a/Dashbord/Age_Chart.html
+++ b/Dashbord/Age_Chart.html
@@ -7,11 +7,11 @@
     <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
-    <title>Race Chart</title>
+    <title>Age Chart</title>
 </head>
 <body>
 <div id="full-size">
-    <canvas id="AgeChart" ></canvas>
+    <canvas id="AgeChart"></canvas>
 </div>
 <script>
     let AgeChart=document.getElementById('AgeChart').getContext('2d');
@@ -66,14 +66,13 @@
                 text:'Pedestrian Collisions (2018)',
                 fontsize:25
             },
-            legend:{
-                position:'right'
+            legend: {
+                position: 'right',
+                labels: {
+                    fontSize: 14,
+                    fontFamily:'Helvetica'
+                },
             },
-            // layout:{
-            //     padding:{
-            //         left:50
-            //     }
-            // }
             tooltips:{
                 enabled:true
             }
