--- a/Dashbord/New_Race_Chart.html
+++ b/Dashbord/New_Race_Chart.html
@@ -20,7 +20,7 @@
             //Global options
             //hides dataset legend
             Chart.defaults.global.legend.display = true;
-            Chart.defaults.global.defaultFontFamily = 'Helvetica';
+            Chart.defaults.global.defaultFontFamily = 'Avenir';
             // Chart.defaults.global.defaultFontSize=18;
             Chart.defaults.global.defaultFontColor = '#ffffff';
             Chart.defaults.scale.gridLines.display = false;
@@ -91,7 +91,7 @@
                         position: 'right',
                         labels: {
                             fontSize: 14,
-                            fontFamily:'Helvetica'
+                            fontFamily:'Avenir'
                         }
                     },
                     /*scales: {
@@ -112,7 +112,10 @@
                     },*/
                     tooltips: {
                         enabled: true
-                    }
+                    },
+                   /* animation:{
+                        duration:0
+                    }*/
                 }
             });
         </script>
